; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ncpfs/extr_sock.c_ncp_connect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ncpfs/extr_sock.c_ncp_connect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ncp_server = type { i32, i32, i32, i64 }
%struct.ncp_request_header = type { i32, i32, i32, i64, i32 }

@NCP_ALLOC_SLOT_REQUEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ncp_connect(%struct.ncp_server* %0) #0 {
  %2 = alloca %struct.ncp_server*, align 8
  %3 = alloca %struct.ncp_request_header*, align 8
  %4 = alloca i32, align 4
  store %struct.ncp_server* %0, %struct.ncp_server** %2, align 8
  %5 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %6 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %5, i32 0, i32 0
  store i32 65535, i32* %6, align 8
  %7 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %8 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %7, i32 0, i32 1
  store i32 255, i32* %8, align 4
  %9 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %10 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %9, i32 0, i32 3
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.ncp_request_header*
  store %struct.ncp_request_header* %12, %struct.ncp_request_header** %3, align 8
  %13 = load i32, i32* @NCP_ALLOC_SLOT_REQUEST, align 4
  %14 = load %struct.ncp_request_header*, %struct.ncp_request_header** %3, align 8
  %15 = getelementptr inbounds %struct.ncp_request_header, %struct.ncp_request_header* %14, i32 0, i32 4
  store i32 %13, i32* %15, align 8
  %16 = load %struct.ncp_request_header*, %struct.ncp_request_header** %3, align 8
  %17 = getelementptr inbounds %struct.ncp_request_header, %struct.ncp_request_header* %16, i32 0, i32 0
  store i32 2, i32* %17, align 8
  %18 = load %struct.ncp_request_header*, %struct.ncp_request_header** %3, align 8
  %19 = getelementptr inbounds %struct.ncp_request_header, %struct.ncp_request_header* %18, i32 0, i32 3
  store i64 0, i64* %19, align 8
  %20 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %21 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %22 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %21, i32 0, i32 3
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %25 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %24, i32 0, i32 2
  %26 = load i32, i32* %25, align 8
  %27 = call i32 @ncp_do_request(%struct.ncp_server* %20, i32 32, i64 %23, i32 %26)
  store i32 %27, i32* %4, align 4
  %28 = load i32, i32* %4, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %1
  br label %42

31:                                               ; preds = %1
  %32 = load %struct.ncp_request_header*, %struct.ncp_request_header** %3, align 8
  %33 = getelementptr inbounds %struct.ncp_request_header, %struct.ncp_request_header* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = load %struct.ncp_request_header*, %struct.ncp_request_header** %3, align 8
  %36 = getelementptr inbounds %struct.ncp_request_header, %struct.ncp_request_header* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 8
  %38 = mul nsw i32 %37, 256
  %39 = add nsw i32 %34, %38
  %40 = load %struct.ncp_server*, %struct.ncp_server** %2, align 8
  %41 = getelementptr inbounds %struct.ncp_server, %struct.ncp_server* %40, i32 0, i32 0
  store i32 %39, i32* %41, align 8
  store i32 0, i32* %4, align 4
  br label %42

42:                                               ; preds = %31, %30
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i32 @ncp_do_request(%struct.ncp_server*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
